feat: Add missing classes and fix compilation errors